@@ -159,6 +159,19 @@ binary-arch: install
 		> "$(CURDIR)/debian/sankore/usr/bin/Open-Sankore"
 	chmod 755 "$(CURDIR)/debian/sankore/usr/bin/Open-Sankore"
 
+	# use jquery.js and jquery.min.js from Debian package libjs-query
+	rm -f $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Editeur HTML.wgt/jquery.pack.js
+	ln -s /usr/share/javascript/jquery/jquery.js $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Editeur HTML.wgt/jquery.pack.js
+
+	rm -f $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Nuancier.wgt/js/jquery.js
+	ln -s /usr/share/javascript/jquery/jquery.js $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Nuancier.wgt/js/jquery.js
+
+	rm -f $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Wikipedia.wgt/script/jquery.min.js
+	ln -s /usr/share/javascript/jquery/jquery.min.js $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Wikipedia.wgt/script/jquery.min.js
+
+	rm -f $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Wiktionnaire.wgt/script/jquery.min.js
+	ln -s /usr/share/javascript/jquery/jquery.min.js $(CURDIR)/debian/sankore-data/usr/share/open-sankore/library/applications/Wiktionnaire.wgt/script/jquery.min.js
+
 	# convert ReleaseNotes.pdf into a Changelog plain text file
 	pdf2txt Sankore-3.1/ReleaseNotes.pdf > Sankore-3.1/changelog
 
